test.yml
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: nfs-pv
# spec:
#   capacity:
#     storage: 10Gi # Adjust the storage size as needed
#   volumeMode: Filesystem
#   accessModes:
#     - ReadWriteMany # Adjust access modes as needed
#   persistentVolumeReclaimPolicy: Retain # Change to your desired reclaim policy
#   nfs:
#     server: 154.26.131.23 # Replace with your NFS server IP or hostname
#     path: /opt/nfs/k3s-volume
# apiVersion: storage.k8s.io/v1
# kind: StorageClass
# metadata:
#   name: example-nfs
# provisioner: example.com/external-nfs
# parameters:
#   server: 154.26.131.23
#   path: /opt/nfs/k3s-volume
#   readOnly: "false"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: nginx-data
          persistentVolumeClaim:
            claimName: foo-pvc # Use the PVC created above
      containers:
        - name: nginx
          image: nginx:latest
          volumeMounts:
            - name: nginx-data
              mountPath: /usr/share/nginx/html # Mount the PVC to Nginx's default HTML path
          resources:
            limits:
              cpu: 100m
              memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30000
  selector:
    app: nginx
# ---
# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: nginx
# spec:
#   selector:
#     matchLabels:
#       app: nginx
#   serviceName: nginx
#   replicas: 3
#   template:
#     metadata:
#       labels:
#         app: nginx
#     spec:
#       containers:
#         - name: nginx
#           image: nginx
#           volumeMounts:
#             - name: nginx-pvc
#               mountPath: /usr/share/nginx/html # Mount the PVC to Nginx's default HTML path

#   volumeClaimTemplates:
#     - metadata:
#         name: nginx-pvc
#       spec:
#         storageClassName: "example-nfs"
#         accessModes: ["ReadWriteMany"]
#         resources:
#           requests:
#             storage: 50Mi
